--- a/globe/index.html
+++ b/globe/index.html
@@ -38,6 +38,6 @@
         <canvas></canvas>
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
